@@ -1,7 +1,9 @@
 # Offpunk History
 
 ## 2.0-beta2 - unreleased
+Changes since beta1
 - "--sync" can optionnaly take some lists as arguments, in order to make for specific sync
+- fixes gophermap being considered as gemtext files 
 
 ## 2.0-beta1 - September 05th 2023
 This is an an experimental release. Bug reports and feedbacks are welcome on the offpunk-devel list.
